--- a/app/views/users/dashboard/_public_writer_profile.html.erb
+++ b/app/views/users/dashboard/_public_writer_profile.html.erb
@@ -16,7 +16,7 @@
                </div>
                <div class="thumbnail--container">
                  <p class="date_post_preview"><%= post.category.name %></p>
-                 <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
+                 <h3 class="article_title"><%= link_to post.title, post %></h3>
                  <p class="date_post_preview"><%= post.publish_at.strftime("%A, %b %d")%></p>
                </div>
              </div>
