--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -4,21 +4,20 @@
     <div>
       <h1 class="pitch_ttl"><%= @title %></h1>
       <% if @desc %>
-        <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. You will have two weeks to submit your article for review after claiming the pitch.</i>
+        <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. Please only claim pitches you intend to write. If you change your mind later, you can unclaim the pitch.</i>
         <br><br>
         <p style="display: inline;">Filter by category</p>
         <%= form_for @pitch, method: "get" do |f| %>
           <%= f.collection_select(:category_id, @categories, :id, :name, {include_blank: "All Pitches"}) %>
           <%= f.submit "Apply filter", method: :index, id: "button_nrml" %>
         <% end %>
-        <br>
       <% end %>
       <% if @pitches.count.eql? 0 %>
-        <i class="pitches-message"><%= @message %></i>
-    <% end %>
+        <p><i><%= @message %></i></p>
+      <% end %>
     </div>
   </div>
-  <div class="flex-wrapper">
+  <div class="flex-wrapper" style="margin: 0 auto 40px auto;">
     <% @pitches.each do |pitch| %>
     <a href="<%= pitch_path(pitch)%>">
       <div class="card" style="width: 32%;">
