--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -71,6 +71,7 @@
           <%= link_to("Edit Profile", edit_user_path(@user)) %>
           <%= link_to("Change Password", edit_user_registration_path) %>
           <%= link_to("Review Onboarding", onboarding_path(:page => "welcome")) %>
+          <%= link_to("Claimed Pitches", pitches_path(user_id: @user.id)) %>
           <%= link_to("Editor Pitches", pitches_path) %>
           <%= link_to "Pitch a new article", new_pitch_path %>
           <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
