css fixes and writer approves editor to make changes

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -229,6 +229,7 @@ html, body {
 }
 
 .pagination {
+  justify-content: center;
   em, a, span {
     padding: 0 10px 20px 0;
     text-decoration: none;
