--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -17,7 +17,7 @@
     <br />
     <%= f.hidden_field :monthly_views, value: 0 %>
     <%= f.hidden_field :password, value: [*('A'..'Z'),*('0'..'9')].shuffle[0,8].join %>
-    <%= f.submit 'Accept Application', class: 'button' %>
+    <%= f.submit 'Accept Application' %>
   <% end %>
   <br>
   <br>
