--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -238,6 +238,7 @@
   .pagination {
     text-align: center;
     margin-bottom: 1.2em;
+    justify-content: center;
     a {
       font-size: inherit !important;
     }
