--- a/app/views/application_mailer/articles_in_progress_reminder.html.erb
+++ b/app/views/application_mailer/articles_in_progress_reminder.html.erb
@@ -28,7 +28,7 @@
         </p>
       <% end %>
     <p>Best,<br/>
-       The Teen Magazine Editor Team
+       Editor Team
     </p>
   </body>
 </html>
