--- a/app/views/application_mailer/pitch_has_been_reviewed.html.erb
+++ b/app/views/application_mailer/pitch_has_been_reviewed.html.erb
@@ -10,6 +10,6 @@
   <body>
     <p>Hi <%= @user.first_name %>,</p>
     <p>An editor has reviewed your pitch. Go to <%= link_to @pitch.title, @pitch %> to see the comments.</p>
-    <p>Best,<br/>Mia</p>
+    <p>Best,<br/>Editor Team</p>
   </body>
 </html>
