--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -10,8 +10,7 @@
   <body>
     <p>Hi <%= @user.first_name %>,</p>
     <p>Congratulations!</p>
-    <p>We really connected with your cover letter and think you are a great fit with our team of writers.
-      My name is Mia, and I'm Editor in Chief at The Teen Magazine.</p>
+    <p>We really connected with your cover letter and think you are a great fit with our team of writers.</p>
     <p>Being a writer for The Teen Magazine offers the experience and mentorship necessary to launch your journalism career.
       You will receive feedback on submitted articles, build your journalism resume, and network with our amazing community
       of journalists. We are so excited to welcome you to our talented team of writers, and we can't wait
