--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -46,7 +46,7 @@ pintrk('track', 'pagevisit');
   <% end %>
   <i style="opacity: 50%;">
     Applications are accepted on a rolling basis. If accepted, you will receive an email from our team of editors within 48 hours. Please note that writers and editors are not paid and instead write for us
-    to gain applicable experience and mentorship in the editorial industry. Read more about us <%= link_to("here", "/about-us", :class => "link_nrml") %>.
+    to gain applicable experience and mentorship in the editorial industry. Read more about us <%= link_to("here", "/about-us", :class => "link_nrml underline") %>.
   </i>
   <br>
   <br>
