--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -23,5 +23,5 @@
     </div>
   <% end %>
 
-  <a href="/login" class="link_nrml">Log in</a>
+  <a href="/login" class="link_nrml underline">Log in</a>
 </div>
