--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -9,7 +9,7 @@
   </p>
   <h1>Our Story</h1>
   <p>
-    As a Junior in high school, <%= link_to("Mia Johansson", User.first, :class => "link_nrml") %>
+    As a Junior in high school, <%= link_to("Mia Johansson", User.first, :class => "link_nrml underline") %>
     found there was a need for an online platform for young writers to connect and have their voices heard.
     She built the first version of The Teen Magazine in 2017, and since then, the online publishing platform has reached hundreds of thousands of readers and
     has a writer community with <%= User.count %> writers from around the world. Mia is now a student Harvard and continues to work on the website.
@@ -19,6 +19,6 @@
     Mia is currently working on new features for The Teen Magazine that will give more resources to writers and make the platform more social.
   </p>
   <h1>Join Our Team</h1>
-  <p>Apply to our writer community <%= link_to("here", "/apply", :class => "link_grn") %>.</p>
+  <p>Apply to our writer community <%= link_to("here", "/apply", :class => "link_nrml underline") %>.</p>
   <br>
 </div>
