--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -22,6 +22,13 @@
   }
 }
 
+.underline {
+  text-decoration: underline;
+}
+
+.theme_color {
+  color: #65B19D !important;
+}
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
