--- a/app/views/application_mailer/article_published.html.erb
+++ b/app/views/application_mailer/article_published.html.erb
@@ -14,6 +14,6 @@
     <img style="display: block; max-width: 100%; width: 400px; margin: 0 auto;" src=<%= images[rand(0..2)] %>>
     <p>Our editors loved your article! You can now view your published article on <%= link_to "The Teen Magazine", @post, :style => "color: #65B19D;" %> and share it with your friends!</p>
     <p>As always, if you have any questions, please do not hesitate to send us an email. Congratulations!</p>
-    <p>Best,<br/>Mia</p>
+    <p>Best,<br/>Editor Team</p>
   </body>
 </html>
