--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,6 +26,9 @@
   <%= f.check_box :bi_monthly_assignment %>
   <%= f.label "receive occasional article assignments" %><br>
 
+  <%= f.check_box :do_not_send_emails %>
+  <%= f.label "turn off all email notifications" %><br>
+
   <h5>Links (Optional)</h5>
 
   <div id="edit--profile">
@@ -73,7 +76,8 @@
   <%= f.label "Admin" %>
   <%= f.check_box :admin %><br />
   <% end %>
+  <br>
 
-<%= f.submit %>
+<%= f.submit "Update Profile" %>
 
 <% end %>
