--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="skinny_wrapper wrapper_padding" style="max-width: 1000px;">
   <%= render 'form' %>
   <% if current_user && current_user.admin? %>
-    <%= link_to "Delete Account", user_path(@user), method: :delete, data: {confirm: "Are you sure you want to delete this user?"},  class: "delete" %>
+    <%= link_to "Delete Account", user_path(@user), method: :delete, data: {confirm: "Are you sure you want to delete this user?"},  class: "pitch_btn delete_btn theme_color", style: "margin-top: -90px;" %>
   <% end %>
 </div>
