--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,10 @@
 .post_image {
   background-image: url(<%= @post.thumbnail.url(:large2) %>);
 }
+blockquote {
+  margin: 1em 0;
+  font-style: italic;
+}
 </style>
 
 <% @collab = nil %>
