--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,8 @@
 <script>
  CKEDITOR.addCss('img{width: 55% !important; height: auto !important;margin-left: auto !important;margin-right: auto !important;display: block;}');
- CKEDITOR.addCss('iframe{margin: 0 auto !important;}');
- CKEDITOR.addCss('p, h1, h2, h3, h4, h5, h6, span {font-family: "Source Sans Pro", sans-serif !important};');
+ CKEDITOR.addCss('iframe, .instagram-media{margin: 1em auto !important;}');
+ CKEDITOR.addCss('a{color: #65B19D !important;}');
+ CKEDITOR.addCss('h1 {font-size: 1.7rem;} h2 {font-size: 1.5rem;} h3 {font-size: 1.3rem;} h4 {font-size: 1.1rem;} h5 {font-size: 0.9rem;} h1, h2, h3, h4, h5, h6, span {margin: 10px 0;}');
  CKEDITOR.addCss('html {margin-left: auto;margin-right: auto;}#twitter-widget-0, #twitter-widget-1 {margin: 0 auto !important;}a {color: #65B19D;}a:hover {opacity: 0.5;}@media (max-width: 600px) {img {width: 100% !important;}}');
 </script>
 
@@ -19,7 +20,7 @@
     <%= f.label :title %>
     <%= f.text_field :title %>
     <br>
-    <%= f.label :content, "Write your article here. Make sure you are saving often." %><br>
+    <%= f.label :content, "Write your article here. Make sure you are saving often. Saving can also help fix formatting issues." %><br>
     <%= f.cktext_area :content %>
     <br>
     <%= f.label "Upload thumbnail image:" %>
