added ezoic code

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,10 @@
         enable_page_level_ads: true
       });
     </script>
+    <!-- Ezoic Code -->
+    	<script>var ezoicId = 187539;</script>
+    	<script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js"></script>
+    <!-- Ezoic Code -->
     <!-- Facebook Pixel Code -->
     <script>
       !function(f,b,e,v,n,t,s)
