--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -20,6 +20,10 @@
         enable_page_level_ads: true
       });
     </script>
+    <!-- Ezoic Code -->
+    	<script>var ezoicId = 187539;</script>
+    	<script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js"></script>
+    <!-- Ezoic Code -->
   </head>
   <body>
     <amp-auto-ads type="adsense"
