--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -14,6 +14,10 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'onboarding', media: 'all' %>
     <%= javascript_include_tag 'application'%>
+    <!-- Ezoic Code -->
+    	<script>var ezoicId = 187539;</script>
+    	<script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js"></script>
+    <!-- Ezoic Code -->
   </head>
   <body>
     <% if notice %>
