--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -57,6 +57,7 @@
       src="https://www.facebook.com/tr?id=2099586743677741&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
   </head>
   <body>
     <amp-auto-ads type="adsense"
@@ -129,6 +130,19 @@
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-89987071-1', 'auto');
       ga('send', 'pageview');
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+    <script>
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#252e39"
+        },
+        "button": {
+          "background": "#14a7d0"
+        }
+      }
+    });
     </script>
   </body>
 </html>
