--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -13,17 +13,13 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-4566416931763342" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-4566416931763342",
         enable_page_level_ads: true
       });
     </script>
-    <!-- Ezoic Code -->
-    	<script>var ezoicId = 187539;</script>
-    	<script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js"></script>
-    <!-- Ezoic Code -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
   </head>
   <body>
