--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -145,7 +145,7 @@
       margin: 0;
       padding: 5px;
       font-size: 30px;
-      -webkit-text-stroke: 1px black;
+      text-shadow: 1px 1px black;
     }
   }
   .G1 {
