--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -87,7 +87,7 @@
   .comments {
     i {
       line-height: 1.5;
-      font-family: "Playfair Display";
+      color: black;
     }
     ul {
       padding-left: 0;
@@ -120,7 +120,7 @@
         right: 0;
         padding-top: 28px;
         position: absolute;
-        z-index: 1;
+        z-index: 10;
       }
       .submit_comment {
         width: 35px;
@@ -132,10 +132,6 @@
         background-image: url("post_comment.png");
         background-size: contain;
         background-repeat: no-repeat;
-        &:hover {
-          cursor:pointer;
-          opacity: 0.9;
-        }
       }
     }
     a {
@@ -172,11 +168,6 @@
   flex-direction: row;
   margin: 0 auto;
   max-width: 90rem;
-}
-
-.posts_hr {
-  margin: auto;
-  margin-top: 20px;
 }
 
 .skinny {
@@ -435,36 +426,4 @@ iframe { margin: 1em auto;  display: block; }
         font-size: 1em;
       }
     }
-}
-
-@media(max-width: 800px) {
-  #nav_article2 {
-    display: none !important;
-  }
-  .main_title2 {
-    margin-left: 0 !important;
-    h1 a:hover {
-      color: white !important;
-    }
-  }
-}
-
-@media (max-width: 386px) {
-  .flex--container--post--title {
-    header {
-      .date {
-        font-size: 12px;
-        color: #00b5f9;
-        padding-bottom: 10px;
-        font-family: 'Roboto Condensed', sans-serif;
-      }
-      h1 {
-        font-size: 2em;
-        margin-bottom: 0;
-        padding: 10px;
-        color: #2b2b2b;
-        font-family: 'Roboto Condensed', sans-serif;
-      }
-    }
-  }
 }
