--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -77,7 +77,7 @@
         <% end %>
       </div>
       <div class="ctgry_grid_wrapper">
-        <a class="applies" href="/apply"><%= image_tag "become_a_writer.jpg" %></a>
+        <a class="applies" href="/apply"><%= image_tag "become_writer.jpg" %></a>
         <div class="ctgry_grid">
           <% publishedPosts.where(:category_id => Category.friendly.find("culture").id).all.order("publish_at desc")[3..4].each do |post| %>
             <% featuredPostIds << post.id %>
@@ -130,4 +130,4 @@
   </div>
 </div>
 
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<%= javascript_include_tag 'mailchimp' %>
